fix: enforce workflow transition guards for checklists and attachments